removed UserId: username used as unique id
