# src/api/middleware.ts
@@ -3,7 +3,7 @@ import { HTTP_UNAUTHORIZED } from "./codes"
 import { decodeJWT } from '../service/jwt'
 
 /**
- * Middleware that checks for a JWT token and if one is present, decodes it and sets body.userId.
+ * Middleware that checks for a JWT token and if one is present, decodes it and sets body.username.
  * If the user is not authenticated, it returns a status 401.
  */
 export const authenticate = (req: Request, res: Response, next: NextFunction) => {
@@ -22,7 +22,7 @@ export const authenticate = (req: Request, res: Response, next: NextFunction) =>
             return
         }
 
-        req.body.userId = payload.userId
+        req.body.username = payload.username
 
         next()
     } catch(e) {
